plugins {
  id 'java-library'
  id 'idea'
  id 'maven-publish'
}

group = 'org.scopemvc'
version = projectVersion + System.getProperty('suffix', '-SNAPSHOT')


java {
  sourceCompatibility = JavaVersion.VERSION_1_8
  targetCompatibility = JavaVersion.VERSION_1_8
}

sourceSets {
  main {
    java.srcDirs = ['src']
    resources {
      srcDirs = ['src']
      exclude '**/*.java'
    }
  }

  test {
    java.srcDirs = ['src.test']
    resources {
      srcDirs = ['src.test']
      exclude '**/*.java'
    }
  }
}

repositories {
  maven {
    name = 'public'; url = MAVEN_REPO
  }
}

dependencies {
  implementation 'commons-logging:commons-logging:1.0.4'
  compileOnly 'javax.servlet:servlet-api:2.5' // provided
  compileOnly 'javax.servlet.jsp:jsp-api:2.1' // provided

  testImplementation 'junit:junit:3.8.2'
  testImplementation 'org.assertj:assertj-core:3.16.1'
  testImplementation files('lib/jfcunit.jar')
  testImplementation 'javax.servlet:servlet-api:2.5'
}


test {
  useJUnit()
}

tasks.withType(JavaCompile).configureEach {
  options.encoding = 'UTF-8'
}

task sourceJar(type: Jar) {
  from sourceSets.main.allJava
  classifier 'sources'
}

publishing {
  publications {
    mavenJava(MavenPublication) {
      from components.java
      artifact sourceJar
    }
  }
}


manifest {
    attributes([
            'Specification-Title'   : project.name,
            'Specification-Vendor'  : 'Statens kartverk',
            'Specification-Version' : (gradle.startParameter.projectProperties.get('projectVersion') ?: projectVersion).replace('-SNAPSHOT', ''),

            //misc build info
            'Build-By'              : System.getProperty('user.name'),
            'Build-Machine'         : java.net.InetAddress.localHost.hostName,
            'Build-Repo'            : MAVEN_REPO,
            'Build-Gradle'          : gradle.gradleVersion,
            'Build-JDK'             : System.getProperty('java.version'),

            'Implementation-Title'  : "${project.name} bygget for ${(version == null || version.contains('-SNAPSHOT') || version.contains('-build')) ? 'TEST' : 'Produksjon'}",
            'Implementation-Vendor' : 'Statens kartverk',
            'Implementation-Version': project.version,
    ])
}

